--- a/create_web.yml
+++ b/create_web.yml
@@ -1,7 +1,6 @@
 #ec2内にwebサーバーを立ち上げるロール
 - name: create web server
-  vars_files: group_vars/all.yml
-  hosts: "{{ ssh_host }}"
+  hosts: all
   become: yes
   become_user: root
   roles:
